# BartaEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  _CMakePresets.json
.github/workflows/: main.yml
include/: Application.h  BartaObject.h  BartaObjectInterface.h  BartaObjectManager.h  DeletableObject.h  DeleteWatchSingleton.h  ListManagerConcept.h  ObjectManagerInterface.h  Predefines.h  ReduceableList.h  StaticObjectManager.h  pch.h
include/Collisions/: CheckCollisionVisitorInterface.h  CollisionAware.h  CollisionAwareInterface.h  CollisionDetectionStrategyInterface.h  CollisionLogger.h  StaticCollisionAware.h  StaticCollisionLogger.h
include/Debug/: DebugGuardSubscriber.h
include/Dynamics/: ConstVelocityDynamicsUpdateStrategy.h  DynamicsAwareInterface.h  DynamicsAwareListConcept.h  DynamicsDTO.h  DynamicsDTOCollection.h  DynamicsDifference.h  DynamicsUpdateStrategyInterface.h  TimerInterface.h
include/Events/: BartaEventLoggerInterface.h  BartaKeyMap.h  PositionAwareConcept.h  TemplateEventSubscriber.h
include/Geometrics/: ConvexFactor.h  Intersections.h  Point.h  Quaternion.h  Ray.h  SFML_Transformable.h  Segment.h  TransformableInterface.h  Transformation.h  Vector.h  Vector2f.h
include/Graphics/: BartaGraphicsBridgeInterface.h  BartaSprite.h  Color.h  GraphicsData.h  GraphicsDataAwareInterface.h  GraphicsDataTransformer.h  OpenGL_Bridge.h  SFML_GraphicsBridge.h
include/Hitbox/: AABB_Hitbox.h  CircleHitbox.h  HitboxAwareConcept.h  HitboxAwareInterface.h  HitboxComposite.h  HitboxInterface.h  NullHitbox.h  OBB_Hitbox.h  TriangleAggregateHitbox.h
include/Objects/: SimpleObject.h
include/SceneLoader/: JsonDecodeException.h  (+8 more)
lib/: Application.cpp  BartaObjectManager.cpp  CMakeLists.txt  DeletableObject.cpp  DeleteWatchSingleton.cpp
lib/Collisions/: CMakeLists.txt
lib/Collisions/CheckCollisionVisitors/: AABB_AABBCheckCollisionVisitor.cpp  CMakeLists.txt  CircleAABBCheckCollisionVisitor.cpp  CircleCircleCheckCollisionVisitor.cpp  OBB_AABBCheckCollisionVisitor.cpp  TriangleAggregateCircle.cpp
lib/Collisions/CollisionDetectionStrategies/: CMakeLists.txt  CollectionStrategyAggregator.cpp  DynamicCollisionDetectionStrategy.cpp  StaticCollisionDetectionStrategy.cpp
lib/Collisions/CollisionTestResult/: CMakeLists.txt  CollisionTestResultBuilder.cpp
lib/Debug/: CMakeLists.txt  DebugGuardSubscriber.cpp
lib/Dynamics/: CMakeLists.txt  ConstVelocityDynamicsUpdateStrategy.cpp
lib/Dynamics/Mass/: CMakeLists.txt  ConstantPointMassDistributionCalculator.cpp
lib/Dynamics/SoftBody/: CMakeLists.txt  SoftBodyDynamicsInterface.cpp  StVenantKirchhoffDynamics.cpp
lib/Dynamics/Timers/: BartaTimer.cpp  CMakeLists.txt  FrameLimitTimerProxy.cpp  SFML_Timer.cpp
lib/Dynamics/UpdateStrategy/: CMakeLists.txt  SoftBodyStrategy.cpp
lib/Events/: CMakeLists.txt
lib/Events/Subscribers/: CMakeLists.txt  CameraTransformationSubscriber.cpp  DynamicsChangeSubscriber.cpp  RigidSoftCollisionResponseSubscriber.cpp
lib/Geometrics/: CMakeLists.txt  Intersections.cpp  Ray.cpp  SFML_Transformable.cpp  Segment.cpp  Transformation.cpp  Vector2f.cpp
lib/Geometrics/BartaShapes/: AABB.cpp  CMakeLists.txt  Circle.cpp  OBB.cpp  Triangle.cpp  TriangleSurface.cpp
lib/Geometrics/Math/: BartaMathLibrary.cpp  CMakeLists.txt  QuadraticEquation.cpp
lib/Graphics/: CMakeLists.txt  GraphicsDataTransformer.cpp  OpenGL_Bridge.cpp  SFML_GraphicsBridge.cpp
lib/Graphics/OpenGL_Bridge/: AbstractBufferGuard.cpp  AttributeArray.cpp  AttributeArrayGuard.cpp  CMakeLists.txt  IndexArrayGuard.cpp  PV_BufferGuard.cpp  Shader.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexArrayGuard.cpp
lib/Graphics/SFML_Bridge/: CMakeLists.txt  SpriteResourceMatcher.cpp
lib/Graphics/SpriteBuilder/: CMakeLists.txt  RectangleWithColorsSpriteBuilder.cpp  SpriteMerger.cpp  StringSpriteBuilder.cpp
lib/Hitbox/: AABB_Hitbox.cpp  CMakeLists.txt  CircleHitbox.cpp  HitboxComposite.cpp  NullHitbox.cpp  OBB_Hitbox.cpp  TriangleAggregateHitbox.cpp
lib/Objects/: CMakeLists.txt  SimpleObject.cpp
lib/Objects/Rigid/: CMakeLists.txt  RigidCompositeObject.cpp  RigidObject.cpp  RigidObjectRepository.cpp
lib/Objects/Soft/: CMakeLists.txt  Mesh.cpp  SoftObject.cpp  TetrahedralElement.cpp
lib/Objects/Soft/MeshLoader/: CMakeLists.txt  MshDataLoader.cpp  MshDataParser.cpp  SurfaceFacesMshParserDecorator.cpp
lib/Objects/Soft/MshLoader/: CMakeLists.txt  DirichletConditionPlugin.cpp  ElementsPlugin.cpp  EntitiesPlugin.cpp  MeshFormatPlugin.cpp  MshDataLoader.cpp  NodesPlugin.cpp
lib/Objects/Soft/MshParser/: CMakeLists.txt  DirichletConditionParserDecorator.cpp  MshDataParser.cpp  SurfaceFacesMshParserDecorator.cpp  TetrahedralElementLoaderDecoratorTest.cpp
lib/SceneLoader/: CMakeLists.txt  JsonDecoderRepository.cpp
lib/Utilities/: CMakeLists.txt  MatrixUtilities.cpp  QuadraticEquation.cpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
test/: CMakeLists.txt
test/Collisions/: CMakeLists.txt
test/Collisions/CheckCollisionVisitors/: CMakeLists.txt  TriangleAggregateCircleTest.cpp
test/Collisions/CollisionDetectionStrategies/: CMakeLists.txt  CollectionStrategyAggregatorTest.cpp
test/Dynamics/: CMakeLists.txt
test/Dynamics/SoftBody/: CMakeLists.txt  SoftBodyDynamicsTest.cpp  StVenantKirchhoffDynamicsTest.cpp
test/Events/: CMakeLists.txt
test/Events/Subscribers/: CMakeLists.txt  RigidSoftCollisionResponseSubscriberTest.cpp
test/Geometrics/: CMakeLists.txt  IntersectionsTest.cpp
test/Geometrics/BartaShapes/: CMakeLists.txt  TriangleSurfaceTest.cpp  TriangleTest.cpp
test/Hitbox/: CMakeLists.txt  TriangleAggregateHitboxTest.cpp
test/Objects/: CMakeLists.txt
test/Objects/Soft/: CMakeLists.txt
test/Objects/Soft/MshLoader/: CMakeLists.txt  DirichletConditionParserDecoratorTest.cpp  DirichletConditionPluginTest.cpp  ElementsPluginTest.cpp  EntitiesPluginTest.cpp  MshDataParserMock.h  NodesPluginTest.cpp  TetrahedralElementLoaderDecorator.cpp
test/Utilities/: CMakeLists.txt  MatrixUtilitiesTest.cpp
test/run/: CMakeLists.txt  Constants.h  Sandbox.cpp  Sandbox.h  main.cpp
(+122 files in other folders)
